<resources>
    <!-- LOADING PAGE -->
    <string name="app_name">Wallpapers</string>
    <string name="developer">Developed by: Freddy Huaman</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ADMIN: MENU ITEMS -->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Listar Administradores</string>
    <string name="SalirAdmin">Cerrar sesión</string>

    <!-- CLIENT: MENU ITEMS -->
    <string name="OpcionesClient">Opciones</string>
    <string name="InicioClient">Inicio</string>
    <string name="MasOpcionesClient">Más opciones</string>
    <string name="AcercaDeClient">Acerca de</string>
    <string name="CompartirClient">Compartir</string>
    <string name="BtnAcceder">Acceder</string>

    <!-- ADMIN: REGISTRAR-ADMIN PAGE -->
    <string name="Registro">Registro de Administradores</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="BtnRegistrar">Registrar</string>

    <!-- ADMIN LOGIN-->
    <string name="LoginTitle">Login de Administradores</string>
    <string name="Ingresar">Ingresar</string>

    <!-- CATEGORIES -->
    <string name="teviEligeCategoria">Elige Categoria</string>
    <string name="btnPeliculas">PELÍCULAS</string>
    <string name="btnSeries">SERIES</string>
    <string name="btnMusica">MÚSICA</string>
    <string name="btnVideojuegos">VIDEOJUEGOS</string>

    <!-- MENU -->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

</resources>